--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "license": "MIT",
   "devDependencies": {
     "babel-preset-es2015": "^6.3.13",
+    "chai": "^3.5.0",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.2",
     "gulp-plumber": "^1.0.1",
-    "gulp-uglify": "^1.5.1"
+    "gulp-uglify": "^1.5.1",
+    "mocha": "^2.4.5"
   }
 }
